; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_input.c_seat_name_cb.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_input.c_seat_name_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl_seat = type { i32 }
%struct.seat_data = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"seat name: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wl_seat*, i8*)* @seat_name_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @seat_name_cb(i8* %0, %struct.wl_seat* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wl_seat*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.seat_data*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.wl_seat* %1, %struct.wl_seat** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.seat_data*
  store %struct.seat_data* %9, %struct.seat_data** %7, align 8
  %10 = load %struct.seat_data*, %struct.seat_data** %7, align 8
  %11 = getelementptr inbounds %struct.seat_data, %struct.seat_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @msg_Dbg(i32 %12, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* %13)
  %15 = load %struct.wl_seat*, %struct.wl_seat** %5, align 8
  ret void
}

declare dso_local i32 @msg_Dbg(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
